--- a/src/_app-common.scss
+++ b/src/_app-common.scss
@@ -1,8 +1,6 @@
 @import "~@nativescript/theme/core";
 @import "~@nativescript/theme/blue";
-
-// Place any CSS rules you want to apply on both iOS and Android here.
-// This is where the vast majority of your CSS code goes.
+@import "styles/custom-styles.scss";
 
 // Font icon class
 .fab {
