--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -16,6 +16,6 @@
 </ActionBar>
 
 <GridLayout class="page__content">
-    <Label class="page__content-icon fas" text="&#xf002;"></Label>
+    <Label class="page__content-icon fas" text="&#xf5d1;"></Label>
     <Label class="page__content-placeholder" text="<!-- Page content goes here -->"></Label>
 </GridLayout>
