added food list

--- a/src/_app-common.scss
+++ b/src/_app-common.scss
@@ -20,6 +20,8 @@
 
 // Common page class
 .page__content {
+    background-color: #f5f5f5;
+
     &-icon,
     &-placeholder {
         color: const(grey);
