--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,7 @@
                 </GridLayout>
 
                 <GridLayout columns="auto, *" class="nt-drawer__list-item"
-                    [class.-selected]="isComponentSelected('/search')" (tap)="onNavItemTap('/search')">
+                    [class.-selected]="isComponentSelected('/food')" (tap)="onNavItemTap('/food')">
                     <Label col="0" text="&#xf5d1;" class="nt-icon fas"></Label>
                     <Label col="1" text="Food" class="p-r-10"></Label>
                 </GridLayout>
