--- a/src/app/food/components/food.component.html
+++ b/src/app/food/components/food.component.html
@@ -14,23 +14,27 @@
     <Label text="Food"></Label>
 </ActionBar>
 
-<!-- <GridLayout class="page__content">
-    <Label class="page__content-icon fas" text="&#xf5d1;"></Label>
-    <Label class="page__content-placeholder" text="No items here."></Label>
-</GridLayout> -->
+<StackLayout *ngIf="isLoading" verticalAlignment="center" horizontalAlignment="center">
+    <ActivityIndicator [busy]="true" color="#13aa52" width="100" height="100"></ActivityIndicator>
+</StackLayout>
 
-<GridLayout class="page__content">
+<GridLayout class="page__content" *ngIf="!isLoading">
     <RadListView [items]="dataItems" pullToRefresh="true" (pullToRefreshInitiated)="onPullToRefreshInitiated($event)">
         <ng-template tkListItemTemplate let-item="item">
-            <!-- <StackLayout orientation="vertical">
-                <Label class="nameLabel" [text]="item.name"></Label>
-                <Label class="descriptionLabel" [text]="item.amount"></Label>
-            </StackLayout> -->
+            <FlexboxLayout flexDirection="row">
+                <GridLayout class="list-item" rows="auto, auto" columns="70, *, 10" margin="4 15">
+                    <StackLayout class="item-icon-background" row="0" rowSpan="2" col="0" height="50" width="50"
+                        verticalAlignment="center" horizontalAlignment="center">
+                        <Label class="item-icon fas" text="&#xf5d1;"></Label>
+                    </StackLayout>
 
-            <FlexboxLayout flexDirection="row" opacity="0.7">
-                <GridLayout rows="auto, auto" columns="*" height="100" margin="2.5 15" padding="10 0" borderRadius="10">
-                    <Label class="nameLabel" row="0" col="1" [text]="item.name"></Label>
-                    <Label class="nameLabel" row="1" col="1" [text]="item.amount"></Label>
+                    <Label class="name-label" row="0" col="1" [text]="item.name"></Label>
+
+                    <GridLayout columns="2*, auto" row="1" col="1">
+                        <Label col="0" [text]="item.amount"></Label>
+                        
+                        <Label class="exp-date-label" col="1" [text]="item.expirationDate | date"></Label>
+                    </GridLayout>
                 </GridLayout>
             </FlexboxLayout>
         </ng-template>
