added food update, updated list

--- a/src/app/food/components/details/food-details.component.html
+++ b/src/app/food/components/details/food-details.component.html
@@ -22,6 +22,6 @@
 
     <StackLayout rows="*, auto" class="info" *ngIf="data.description">
         <Label class="sub-title" text="DESCRIPTION"></Label>
-        <Label class="description" [text]="data.description"></Label>
+        <Label class="description" [text]="data.description" textWrap="true"></Label>
     </StackLayout>
 </StackLayout>
