--- a/src/app/food/components/list/food.component.html
+++ b/src/app/food/components/list/food.component.html
@@ -5,7 +5,7 @@
 
     <Label text="Food"></Label>
 
-    <ActionItem icon="font://&#xf055;" class="fas" ios.position="right" [nsRouterLink]="['create']"></ActionItem>
+    <ActionItem icon="res://add" ios.position="right" [nsRouterLink]="['create']"></ActionItem>
 </ActionBar>
 
 <StackLayout *ngIf="isLoading" verticalAlignment="center" horizontalAlignment="center">
