added back icon

--- a/src/app/food/components/details/food-details.component.html
+++ b/src/app/food/components/details/food-details.component.html
@@ -1,5 +1,5 @@
 <ActionBar>
-    <NavigationButton ios:visibility="collapsed" icon="font://&#xf104;" class="fas" (tap)="goBack()"></NavigationButton>
+    <NavigationButton ios:visibility="collapsed" icon="res://back" class="fas" (tap)="goBack()"></NavigationButton>
 
     <Label text="Details"></Label>
 
