--- a/src/app/food/components/list/food.component.html
+++ b/src/app/food/components/list/food.component.html
@@ -13,9 +13,13 @@
 </StackLayout>
 
 <GridLayout class="page__content" *ngIf="!isLoading" tkExampleTitle tkToggleNavButton>
-    <RadListView #myListView [items]="dataItems" row="1" selectionBehavior="None" margin="5 10" swipeActions="true"
-        (itemSwipeProgressStarted)="onSwipeCellStarted($event)" (itemSwipeProgressChanged)="onCellSwiping($event)"
-        pullToRefresh="true" (pullToRefreshInitiated)="onPullToRefreshInitiated($event)">
+    <Label class="page__content-icon fas" *ngIf=" !dataItems.length" text="&#xf5d1;"></Label>
+    <Label class="page__content-placeholder" *ngIf=" !dataItems.length" text="No items found!"></Label>
+
+    <RadListView #myListView *ngIf="dataItems.length" [items]="dataItems" row="1" selectionBehavior="None" margin="5 10"
+        swipeActions="true" (itemSwipeProgressStarted)="onSwipeCellStarted($event)"
+        (itemSwipeProgressChanged)="onCellSwiping($event)" pullToRefresh="true"
+        (pullToRefreshInitiated)="onPullToRefreshInitiated($event)">
 
         <ng-template tkListItemTemplate let-item="item">
             <FlexboxLayout flexDirection="row" (longPress)="navigateToDetails(item)"
@@ -29,8 +33,8 @@
                     <GridLayout columns="*, auto" row="0" col="1">
                         <Label class="name-label" [text]="item.name"></Label>
 
-                        <Label class="item-icon fas expand-chevron" col="1" text="&#xf078;" *ngIf="item.description && !item.isExpanded"></Label>
-                        <Label class="item-icon fas expand-chevron" col="1" text="&#xf077;" *ngIf="item.description && item.isExpanded"></Label>
+                        <Label class="item-icon fas expand-chevron" col="1" *ngIf="item.description"
+                            [text]=" item.isExpanded ? '&#xf077;':'&#xf078;'"></Label>
                     </GridLayout>
 
                     <GridLayout columns="2*, auto" row="1" col="1">
