added basket page

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -63,7 +63,7 @@
         background-color: #ffbb00;
     }
 
-    &.buy {
-        background-color: #2587ce;
+    &.complete {
+        background-color: #13aa52;
     }
 }
