--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,9 +13,9 @@
         <ScrollView row="1" class="nt-drawer__body">
             <StackLayout>
                 <GridLayout columns="auto, *" class="nt-drawer__list-item"
-                    [class.-selected]="isComponentSelected('/home')" (tap)="onNavItemTap('/home')">
-                    <Label col="0" text="&#xf015;" class="nt-icon fas"></Label>
-                    <Label col="1" text="Home" class="p-r-10"></Label>
+                    [class.-selected]="isComponentSelected('/basket')" (tap)="onNavItemTap('/basket')">
+                    <Label col="0" text="&#xf290;" class="nt-icon fas"></Label>
+                    <Label col="1" text="Basket" class="p-r-10"></Label>
                 </GridLayout>
 
                 <GridLayout columns="auto, *" class="nt-drawer__list-item"
